# MedPro

./: DEPLOYMENT_STATUS.md  Dockerfile  INSTALL.md  Makefile  README-DOCKER.md  README.md  ai_report_prompts.py  ai_reports.py  ai_reports_backup.py  ai_services.py  ai_system_validation_report.md  app.py  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-healthcheck.sh  enhanced_workflow_solution.md  generate_ai_reports.py  generate_enhanced_reports.py  init.sql  medisina_api.py  models.py  multilingual_demo.md  nginx.conf  nginx.prod.conf  populate_sample_data.py  populate_sample_reports.py  postgresql.conf  pyproject.toml  redis.conf  replit.md  routes.py  routes_backup.py  sms_service.py  test_ai_report_generation.py  test_prompt_analysis.py  test_workflow_integration.py  translations.py  ui_ux_test_report.md  (+2 more)
scripts/: backup.sh  restore.sh
static/js/: app.js  contextual-help.js  language-system.js  medlab-simple.js  mobile-app-companion.js  patient-journey-tracker.js  pdf-report-generator.js  real-time-collaboration.js  smart-notifications.js  sw.js  test-panel-wizard.js
templates/: base.html  comprehensive_report.html  dashboard.html  generate_report.html  integration_settings.html  landing.html  login.html  patient_reports.html  patients.html  report_detail.html  reports.html  samples.html  settings.html  tests.html
